--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
 
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
+    implementation project(':nativetemplates')
+    implementation 'com.google.android.gms:play-services-ads:19.0.0'
+
 }
