--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,10 @@ buildscript {
         
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.2'
         classpath 'com.android.tools.build:gradle:3.5.3'
+
+
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://maven.google.com"
+
+        }
         
     }
 }
